# murmur2-calculator

./: README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
