[package]
name = "murmur2-calculator"
version = "0.1.0"
authors = ["Davide <davide.ceschia@gmail.com>"]
license = "GPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "murmur2_calculator"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
num-bigint = "0.2"
num-traits = "0.2"