[package]
name = "murmur2-calculator"
version = "0.1.0"
authors = ["Davide <davide.ceschia@gmail.com>"]
license = "GPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "murmur2_calculator"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.9.1"

[dependencies]
neon = "0.9.1"
num-bigint = "0.2"
num-traits = "0.2"
murmurhash32 = { git = "https://github.com/gorilla-devs/murmurhash32.git" }
